# astro

./: .gitignore  LICENSE.txt  Makefile  README.md  con440.c  novasc3.1-linux64.patch  setup-linux64.sh
docs/: de440-and-novas-research.md
ephutil/: Makefile  bull_a.c  bull_a.h  ephutil.c  ephutil.h  moon.c  moon.h  obs.c  rootfind.c  strutil.c
libastro/: .gitignore  CMakeLists.txt  README.md  flake.nix
libastro/cli/: CMakeLists.txt  astro.cpp
libastro/cmake/: astroConfig.cmake.in  mdspan.cmake
libastro/docs/: constants.md  reference.md  tutorial.md
libastro/examples/: CMakeLists.txt  planets.cpp
libastro/include/astro/: accuracy.hpp  body.hpp  constants.hpp  ephemeris.hpp  error.hpp  frames.hpp  phenomena.hpp  reductions.hpp  state_vector.hpp  time.hpp  time_scales.hpp
libastro/scripts/: fetch_ephemeris.sh  vendor_mdspan.sh
libastro/src/: ephemeris.cpp  nutation.cpp  nutation_tables.inc  phenomena.cpp  reductions.cpp  time.cpp
libastro/test/: CMakeLists.txt
libastro/test/unit/: test_apsides.cpp  test_constants.cpp  test_ecl.cpp  test_ephemeris.cpp  test_hor.cpp  test_horizon.cpp  test_nutation.cpp  test_place.cpp  test_replay.cpp  test_star.cpp  test_time.cpp  test_tropical.cpp
libastro/test/vectors/: .gitkeep  golden_ecl.csv  golden_hor.csv  golden_nutation.csv  golden_place_de440.csv  golden_star_de440.csv  golden_state_de440.csv
libastro/tools/: extract_nutation_tables.py
planets/: Makefile  bull_a.c  equinox.c  planets.c
support/: Makefile.Cdist  Makefile.fortran  fortran.patch  fsizer4.c  jplbin.h  jpleph.c  jpleph.h  jplint.c  jplint.h  jplsubs.awk  novasc3.1-linux64.patch
tropical/: Makefile  plot.c  plot.h  tropical.c
